tests/baselines/reference/overloadResolutionOnDefaultConstructor1.errors.txt
tests/cases/compiler/overloadResolutionOnDefaultConstructor1.ts(3,16): error TS2346: Supplied parameters do not match any signature of call target.


==== tests/cases/compiler/overloadResolutionOnDefaultConstructor1.ts (1 errors) ====
    class Bar {
        public clone() {
            return new Bar(0);
                   ~~~~~~~~~~
!!! error TS2346: Supplied parameters do not match any signature of call target.
        }
    }